--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,30 @@
         android:smallScreens="true" />
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <!-- Required only if your app needs to access images or photos
+     that other apps created. -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+    <!-- Required only if your app needs to access videos
+         that other apps created. -->
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
+
+
+    <!-- Required only if your app needs to access audio files
+         that other apps created. -->
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="29" />
+
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:allowBackup="true"
@@ -21,14 +45,17 @@
         android:theme="@style/Theme.MyApplication2"
         tools:targetApi="31">
         <activity
-            android:name=".AlarmActivity"
-            android:screenOrientation="portrait"
+            android:name="StorageTest.StorageMainActivity"
             android:exported="false" />
         <activity
-            android:name=".addAlarmActivity"
-            android:screenOrientation="portrait"
+            android:name=".AlarmActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize"/>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".addAlarmActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
 
         <receiver
             android:name="Signals_Receivers.wakeupReceiver"
@@ -52,7 +79,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
