--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+
+
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+
+
+
+
+
     <supports-screens
         android:largeScreens="true"
         android:normalScreens="true"
