--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,8 @@
             android:name="SongsMain.SongsMain_view"
             android:exported="true"
             android:launchMode="singleTask"
-            android:resizeableActivity="true" >
+            android:resizeableActivity="true"
+            android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
