--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
 
 
@@ -19,12 +20,14 @@
         android:smallScreens="true" />
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+
     <!--
  Required only if your app needs to access images or photos
      that other apps created.
     -->
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+      <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <!--
  Required only if your app needs to access videos
          that other apps created.
@@ -41,9 +44,10 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
-    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- <uses-permission android:name="android.permission.CAMERA" />                                    -->
 
     <application
+        android:name="SongsMain.Tutorial.Application"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -52,7 +56,7 @@
         android:roundIcon="@drawable/comehere"
         android:supportsRtl="true"
         android:theme="@style/Theme.BotofanThemeNoActionBar"
-        tools:targetApi="31" >
+         >
 
 
         <provider
@@ -73,7 +77,7 @@
 
 
 
-        <activity
+        <!-- <activity
             android:name="StorageTest.StorageMainActivity"
             android:exported="false" />
         <activity
@@ -82,7 +86,7 @@
         <activity
             android:name=".addAlarmActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize" /> -->
 
         <receiver
             android:name="Signals_Receivers.wakeupReceiver"
@@ -105,6 +109,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="SongsMain.Tutorial.MusicPlayerService"
+            android:foregroundServiceType="mediaPlayback"
+            android:exported="false"/>
+
+
     </application>
 
 </manifest>
