--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
@@ -41,7 +41,9 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/comehere"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BotofanThemeNoActionBar" >
+        android:theme="@style/Theme.BotofanThemeNoActionBar">
+
+
         <activity
             android:name="SongsMain.Tabs.FullScreenSong"
             android:exported="false" />
@@ -50,7 +52,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
@@ -78,7 +80,7 @@
         <receiver
             android:name="Signals_Receivers.wakeupReceiver"
             android:enabled="false"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -89,7 +91,8 @@
             android:name="SongsMain.SongMain_Activity"
             android:exported="true"
             android:launchMode="singleTask"
-            android:resizeableActivity="true" >
+            android:resizeableActivity="true"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
