--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,10 +100,18 @@
             </intent-filter>
         </activity>
 
+
+
         <service
-            android:name="SongsMain.Service.MusicPlayerService"
+            android:name="SongsMain.Service.Media3Service"
             android:exported="false"
-            android:foregroundServiceType="mediaPlayback" />
+            android:foregroundServiceType="mediaPlayback" >
+
+            <intent-filter>
+                <action android:name="androidx.media3.session.MediaSessionService"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
