--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.9.0"
+flexbox = "3.0.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -11,21 +12,28 @@ composeBom = "2024.04.01"
 constraintlayout = "2.2.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-lifecycleViewmodelKtx = "2.9.0-alpha11"
+lifecycleViewmodelKtx = "2.8.7"
 activityKtx = "1.10.1"
 fragmentKtx = "1.8.6"
 coreAnimation = "1.0.0"
 activity = "1.10.1"
 legacySupportV4 = "1.0.0"
+media3Exoplayer = "1.2.1"
+media3Ui = "1.2.1"
 recyclerview = "1.4.0"
 lifecycleLivedataKtx = "2.8.7"
 navigationFragment = "2.8.9"
 navigationUi = "2.8.9"
 navigationFragmentKtx = "2.8.9"
 navigationUiKtx = "2.8.9"
+media3-session="1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
+androidx-media3-session = { module = "androidx.media3:media3-session",version.ref ="media3-session" }
+androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Ui" }
+flexbox = { module = "com.google.android.flexbox:flexbox", version.ref = "flexbox" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -59,4 +67,3 @@ androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
